# locality

./: .gitignore  .mintignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  docs.json  llms.txt  plan.md
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
crates/afs-cli/: Cargo.toml
crates/afs-cli/src/: commands.rs  connect.rs  connector.rs  daemon.rs  diff.rs  doctor.rs  file_provider.rs  history.rs  info.rs  inspect.rs  lib.rs  local_oauth.rs  mount.rs  pull.rs  push.rs  resolve.rs  restore.rs  search.rs  status.rs  templates.rs
crates/afs-cli/tests/: architecture_behavior.rs  connect.rs  daemon.rs  diff.rs  doctor.rs  e2e_push_workflow.rs  history.rs  info.rs  inspect.rs  live_workspace_mount.rs  mount.rs  projection_contract.rs  pull.rs  push.rs  restore.rs  search.rs  status.rs  templates.rs
crates/afs-connector/: Cargo.toml
crates/afs-connector/src/: lib.rs
crates/afs-connector/tests/: executor_adapter.rs
crates/afs-core/: Cargo.toml
crates/afs-core/src/: canonical.rs  conflict.rs  diff.rs  error.rs  explain.rs  freshness.rs  hydration.rs  journal.rs  lib.rs  model.rs  planner.rs  push.rs  shadow.rs  undo.rs
crates/afs-core/tests/: block_diff.rs  canonical.rs  explain.rs  freshness.rs  push_executor.rs  push_pipeline.rs  state_machine.rs  undo.rs
crates/afs-fuse/: Cargo.toml
crates/afs-fuse/src/: linux.rs  main.rs
crates/afs-notion/: Cargo.toml
crates/afs-notion/src/: apply.rs  client.rs  database.rs  dto.rs  fetch.rs  lib.rs  mapping.rs  media.rs  oauth.rs  projection.rs  render.rs
crates/afs-notion/tests/: apply.rs  fetch_render.rs  live_integrity.rs  observe.rs
crates/afs-platform/: Cargo.toml
crates/afs-platform/src/: bundle.rs  capabilities.rs  daemon.rs  lib.rs  paths.rs  process.rs
crates/afsd/: Cargo.toml
crates/afsd/src/: autosave.rs  execution.rs  file_provider.rs  freshness.rs  hydration.rs  ipc.rs  lib.rs  mcp.rs  media.rs  notion.rs  pull.rs  push.rs  reconcile.rs  runtime.rs  server.rs  shadow_match.rs  source.rs  supervisor.rs  virtual_fs.rs  watcher.rs
crates/afsd/tests/: hydration_executor.rs  hydration_queue.rs  notion_hydration.rs  push_execution.rs  push_preparation.rs  runtime.rs  scheduled_pull.rs  source_descriptor.rs  supervisor.rs  watcher.rs
crates/loc-cli/: Cargo.toml
crates/loc-cli/src/: commands.rs  connect.rs  connector.rs  create.rs  daemon.rs  diff.rs  doctor.rs  file_provider.rs  history.rs  info.rs  inspect.rs  lib.rs  local_oauth.rs  main.rs  mount.rs  mv.rs  okf.rs  pull.rs  push.rs  restore.rs  sandbox.rs  search.rs  status.rs  templates.rs
crates/loc-cli/tests/: architecture_behavior.rs  connect.rs  create.rs  daemon.rs  diff.rs  doctor.rs  e2e_push_workflow.rs  history.rs  info.rs  inspect.rs  live_google_connectors.rs  live_workspace_mount.rs  mount.rs  mv.rs  okf.rs  projection_contract.rs  pull.rs  push.rs  restore.rs  sandbox.rs  search.rs  status.rs  templates.rs
crates/locality-confluence/: Cargo.toml
crates/locality-confluence/src/: client.rs  connector.rs  dto.rs  lib.rs  render.rs
crates/locality-confluence/tests/: connector.rs
crates/locality-connector/: Cargo.toml
crates/locality-connector/src/: lib.rs  network.rs  oauth_broker.rs
crates/locality-connector/tests/: executor_adapter.rs  portable_boundary.rs
crates/locality-core/: Cargo.toml
crates/locality-core/src/: canonical.rs  conflict.rs  diff.rs  error.rs  explain.rs  freshness.rs  journal.rs  lib.rs  model.rs  path_projection.rs  planner.rs  portable.rs  pull.rs  push.rs  readable_diff.rs  search.rs  shadow.rs  sync.rs  undo.rs  validation.rs
crates/locality-core/tests/: block_diff.rs  canonical.rs  error.rs  explain.rs  freshness.rs  push_executor.rs  push_pipeline.rs  state_machine.rs  undo.rs
crates/locality-engine/: Cargo.toml
crates/locality-engine/src/: apply_reconcile.rs  lib.rs  prepare_changeset.rs  synchronize_project.rs
crates/locality-engine/tests/: prepare_changeset.rs  synchronize_project.rs
crates/locality-gmail/: Cargo.toml
crates/locality-gmail/src/: attachments.rs  client.rs  connector.rs  dto.rs  lib.rs  oauth.rs  render.rs  settings.rs
crates/locality-google-calendar/: Cargo.toml
crates/locality-google-calendar/src/: client.rs  connector.rs  dto.rs  lib.rs  oauth.rs  render.rs  settings.rs
crates/locality-google-docs/: Cargo.toml
crates/locality-google-docs/src/: client.rs  connector.rs  docs_dto.rs  drive_dto.rs  lib.rs  oauth.rs  render.rs
crates/locality-granola/: Cargo.toml
crates/locality-granola/src/: client.rs  connector.rs  dto.rs  lib.rs  render.rs
crates/locality-granola/tests/: live_integrity.rs
crates/locality-notion/: Cargo.toml
crates/locality-notion/src/: apply.rs  client.rs  database.rs  database_create.rs  dto.rs  fetch.rs  lib.rs  mapping.rs  markdown_table.rs  media.rs  oauth.rs  portable.rs  projection.rs  render.rs  schema.rs
crates/locality-notion/tests/: apply.rs  fetch_render.rs  live_integrity.rs  observe.rs
crates/locality-planned-connectors/: Cargo.toml
crates/locality-planned-connectors/src/: lib.rs
crates/locality-platform/: Cargo.toml
crates/locality-platform/src/: bundle.rs  capabilities.rs  cloud_files.rs  daemon.rs  lib.rs  logs.rs  paths.rs
crates/locality-store/: Cargo.toml
crates/locality-store/src/: compatibility.rs  credentials.rs  discovery.rs  error.rs  lib.rs  live_mode.rs  memory.rs  pre_hydration.rs  records.rs  repository.rs  reset.rs  sqlite.rs
crates/locality-store/tests/: discovery.rs  repository.rs  reset.rs  sqlite.rs  virtual_move.rs
crates/localityd/: Cargo.toml  build.rs
crates/localityd/src/: autosave.rs  confluence.rs  discovery.rs  discovery_execution.rs  durable_fs.rs  execution.rs  file_provider.rs  freshness.rs  github.rs  gitlab.rs  gmail.rs  google_calendar.rs  google_docs.rs  granola.rs  hydration.rs  ipc.rs  lib.rs  linear.rs  main.rs  mcp.rs  media.rs  notion.rs  pre_hydration.rs  projection_state.rs  pull.rs  push.rs  reconcile.rs  remote_truth.rs  replica_materializer.rs  runtime.rs  scheduler.rs  server.rs  shadow_match.rs  (+7 more)
(+469 files in other folders)
