[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/loc-cli",
  "crates/localityd",
  "crates/locality-core",
  "crates/locality-connector",
  "crates/locality-platform",
  "crates/locality-store",
  "crates/locality-notion",
  "crates/locality-google-docs",
  "crates/locality-google-calendar",
  "crates/locality-gmail",
  "crates/locality-granola",
  "crates/locality-linear",
  "crates/locality-slack",
  "crates/locality-planned-connectors",
  "platform/linux/locality-fuse",
  "platform/windows/locality-cloud-files",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "TBD"
rust-version = "1.96"

[workspace.dependencies]
locality-core = { path = "crates/locality-core" }
locality-connector = { path = "crates/locality-connector" }
locality-platform = { path = "crates/locality-platform" }
locality-store = { path = "crates/locality-store" }
locality-notion = { path = "crates/locality-notion" }
locality-google-docs = { path = "crates/locality-google-docs" }
locality-google-calendar = { path = "crates/locality-google-calendar" }
locality-gmail = { path = "crates/locality-gmail" }
locality-granola = { path = "crates/locality-granola" }
locality-linear = { path = "crates/locality-linear" }
locality-slack = { path = "crates/locality-slack" }
locality-planned-connectors = { path = "crates/locality-planned-connectors" }
