[package]
name = "afs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "afs_cli"
path = "src/lib.rs"

[[bin]]
name = "afs"
path = "src/main.rs"

[dependencies]
afs-core.workspace = true
afs-connector.workspace = true
afs-store.workspace = true
afs-notion.workspace = true
afsd = { path = "../afsd" }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"
