[package]
name = "afs-connector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "afs_connector"
path = "src/lib.rs"

[dependencies]
afs-core.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
