[package]
name = "afs-core"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "afs_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yaml_serde = "0.10"

[dev-dependencies]
serde_json = "1.0"
