[package]
name = "afs-fuse"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "afs-fuse"
path = "src/main.rs"

[target.'cfg(target_os = "linux")'.dependencies]
afs-core.workspace = true
afsd = { path = "../afsd" }
base64 = "0.22"
bytes = "1"
fuse3 = { version = "0.9", features = ["tokio-runtime", "unprivileged"] }
futures-util = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
