[package]
name = "afs-notion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "afs_notion"
path = "src/lib.rs"

[dependencies]
afs-core.workspace = true
afs-connector.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
yaml_serde = "0.10"

[dev-dependencies]
tempfile = "3"
