[package]
name = "afs-notion"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "afs_notion"
path = "src/lib.rs"

[dependencies]
afs-core.workspace = true
afs-connector.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "multipart", "query", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
yaml_serde = "0.10"

[dev-dependencies]
tempfile = "3"
