[package]
name = "loc-cli"
version = "0.3.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "loc_cli"
path = "src/lib.rs"

[[bin]]
name = "loc"
path = "src/main.rs"

[dependencies]
locality-core.workspace = true
locality-connector.workspace = true
locality-platform.workspace = true
locality-store.workspace = true
locality-notion.workspace = true
locality-gmail.workspace = true
locality-granola.workspace = true
locality-google-calendar.workspace = true
locality-linear.workspace = true
locality-google-docs.workspace = true
localityd = { path = "../localityd" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"
