[package]
name = "loc-cli"
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "loc_cli"
path = "src/lib.rs"

[[bin]]
name = "loc"
path = "src/main.rs"

[dependencies]
locality-core.workspace = true
locality-connector.workspace = true
locality-platform.workspace = true
locality-protocol.workspace = true
locality-store.workspace = true
locality-notion.workspace = true
locality-gmail.workspace = true
locality-granola.workspace = true
locality-google-calendar.workspace = true
locality-linear.workspace = true
locality-google-docs.workspace = true
locality-slack.workspace = true
localityd = { path = "../localityd" }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
yaml_serde = "0.10"

[dev-dependencies]
tar = { version = "0.4", default-features = false }
zstd = { version = "0.13", default-features = false }
