[package]
name = "locality-connector"
version = "0.2.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "locality_connector"
path = "src/lib.rs"

[dependencies]
locality-core.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
