[package]
name = "locality-core"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "locality_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
similar = "3.1.1"
yaml_serde = "0.10"

[dev-dependencies]
serde_json = "1.0"
