[package]
name = "locality-google-docs"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "locality_google_docs"
path = "src/lib.rs"

[dependencies]
locality-core.workspace = true
locality-connector.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
