[package]
name = "locality-granola"
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "locality_granola"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
locality-core.workspace = true
locality-connector.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
