[package]
name = "locality-planned-connectors"
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "locality_planned_connectors"
path = "src/lib.rs"

[dependencies]
locality-core.workspace = true
locality-connector.workspace = true

