[package]
name = "locality-platform"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "locality_platform"
path = "src/lib.rs"

[dependencies]
locality-store.workspace = true
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console"] }
