[package]
name = "locality-store"
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "locality_store"
path = "src/lib.rs"

[dependencies]
locality-core.workspace = true
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
