[package]
name = "localityd"
version = "0.3.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "localityd"
path = "src/lib.rs"

[[bin]]
name = "localityd"
path = "src/main.rs"

[dependencies]
locality-core.workspace = true
locality-engine.workspace = true
locality-platform.workspace = true
locality-protocol.workspace = true
locality-store.workspace = true
locality-connector.workspace = true
locality-notion.workspace = true
locality-google-docs.workspace = true
locality-gmail.workspace = true
locality-granola.workspace = true
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
getrandom = "0.3"
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = { version = "0.4", default-features = false }
unicode-normalization = "0.1"
zstd = { version = "0.13", default-features = false }
