[package]
name = "localityd"
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "localityd"
path = "src/lib.rs"

[[bin]]
name = "localityd"
path = "src/main.rs"

[dependencies]
locality-core.workspace = true
locality-platform.workspace = true
locality-store.workspace = true
locality-connector.workspace = true
locality-notion.workspace = true
locality-google-docs.workspace = true
locality-google-calendar.workspace = true
locality-gmail.workspace = true
locality-granola.workspace = true
locality-linear.workspace = true
locality-slack.workspace = true
locality-planned-connectors.workspace = true
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
getrandom = "0.3"
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
