[package]
name = "afs-desktop"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
afs-cli = { path = "../../../crates/afs-cli" }
afs-core.workspace = true
afs-notion.workspace = true
afs-platform.workspace = true
afs-store.workspace = true
afsd = { path = "../../../crates/afsd" }
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
