[package]
name = "locality-desktop"
version = "0.3.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
loc-cli = { path = "../../../crates/loc-cli" }
locality-connector.workspace = true
locality-core.workspace = true
locality-gmail.workspace = true
locality-google-docs.workspace = true
locality-notion.workspace = true
locality-platform.workspace = true
locality-slack.workspace = true
locality-store.workspace = true
localityd = { path = "../../../crates/localityd" }
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
] }
