[package]
name = "afs-cloud-files"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "afs-cloud-files"
path = "src/main.rs"

[dependencies]
afsd = { path = "../../../crates/afsd" }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Storage",
  "Storage_Provider",
  "Storage_Search",
  "Win32_Storage_CloudFilters",
  "Win32_System_CorrelationVector",
  "Win32_System_IO",
] }
