[package]
name = "locality-cloud-files"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "locality-cloud-files"
path = "src/main.rs"

[dependencies]
locality-core = { path = "../../../crates/locality-core" }
locality-platform.workspace = true
locality-store = { path = "../../../crates/locality-store" }
localityd = { path = "../../../crates/localityd" }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Storage",
  "Storage_Provider",
  "Storage_Search",
  "Win32_Storage_CloudFilters",
  "Win32_System_CorrelationVector",
  "Win32_System_IO",
] }
notify = "8"
